# panda

./: .gitignore  2.0.0  AUDIT_TOOL_ANALYSIS.md  COGNITIVE_AUDIT_VALIDATION.md  DESIGN.md  Dockerfile  LICENSE  NEW_MENTAL_MODELS_SUMMARY.md  README.md  auditingpatterns.md  mentalmodels.md  pyproject.toml  run_server.py  smithery.yaml  test_integration.py  test_taskmaster_style.py
.github/workflows/: ci.yml
docs/: deployment.md
src/panda_mcp/: __init__.py  mcp_server.py
src/panda_mcp/audit_frameworks/: __init__.py  base.py  compliance_audit.py  financial_audit.py  it_audit.py  process_audit.py  quality_audit.py  security_audit.py
src/panda_mcp/auditing_frameworks/: __init__.py  base.py  consistency.py  quality.py  security.py
src/panda_mcp/mental_models/: __init__.py  adaptive_planning.py  base.py  constraint_optimization.py  critical_path.py  decision_trees.py  design_thinking.py  devils_advocate.py  evidence_synthesis.py  feedback_loops.py  first_principles.py  knowledge_integration.py  minimum_viable_plan.py  outcome_prediction.py  parallel_processing.py  performance_optimization.py  quality_gates.py  rapid_prototyping.py  resource_optimization.py  scamper.py  scenario_planning.py  six_thinking_hats.py  stakeholder_alignment.py  swot_analysis.py  systems_integration.py  systems_thinking.py  task_decomposition.py  threat_modeling.py  value_stream_mapping.py
src/panda_mcp/server/: __init__.py  server.py
src/panda_mcp/tools/: __init__.py  audit.py  plan.py  (+1 more)
tests/: test_auditing.py  test_execution.py  test_mental_models.py  test_planning.py  test_server.py
(+11 files in other folders)
