[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panda-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for enhanced LLM planning and auditing capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "llm", "planning", "auditing", "ai"]
authors = [
    { name = "TanukiMCP", email = "contact@tanukimcp.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/tanukimcp/panda"
Documentation = "https://docs.smithery.ai/panda"
Repository = "https://github.com/tanukimcp/panda.git"
Issues = "https://github.com/tanukimcp/panda/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/panda_mcp"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"] 